--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "discord.js-reaction-controller",
-  "version": "2.1.1",
+  "name": "discord.js-button-controller-v14",
+  "version": "1.0.0",
   "main": "dist/index.js",
-  "repository": "https://github.com/InkoHX/discord.js-reaction-controller.git",
-  "author": "InkoHX <inkohx@gmail.com>",
+  "repository": "https://github.com/waki285/discord.js-button-controller-v14.git",
+  "author": "waki285 <suzuneu@suzuneu.com>",
   "license": "MIT",
-  "funding": {
-    "type": "patreon",
-    "url": "https://www.patreon.com/inkohx"
-  },
   "keywords": [
     "discord.js"
   ],
@@ -16,16 +12,16 @@
     "prepublishOnly": "tsc"
   },
   "peerDependencies": {
-    "discord.js": ">=12.5.1"
+    "discord.js": ">=14.0.0"
   },
   "devDependencies": {
     "@inkohx/eslint-config-codestyle": "^3.0.3",
-    "@types/node": "^15.0.1",
+    "@types/node": "^16.17.1",
     "@types/ws": "^7.4.2",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^3.10.1",
-    "discord.js": ">=12.5.1",
+    "discord.js": ">=14.5.0",
     "eslint": "^7.25.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.8.4"
   }
 }
